Fixed some spacing issues in responsive mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ body {
     align-items: center;
     margin-top: 30px;
     font-size: 1.5rem;
+    letter-spacing: 0.2rem;
 }
 
 .quiz {
@@ -45,22 +46,24 @@ body {
 
 @media (max-width:1060px){
     .heading-container{
-        font-size: 1.4;
+        font-size: 1.3;
+        letter-spacing: 0.1rem;
     }
     .quiz{
         grid-template-rows: repeat(3,1fr);
         grid-template-columns: repeat(2,1fr);
-        gap: 0.8rem;
+        gap: 1rem;
     }
 }
 @media (max-width:650px) {
     .heading-container{
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        letter-spacing: 0.1rem;
     }
     .quiz{
         grid-template-rows: repeat(6,1fr);
         grid-template-columns: repeat(1,1fr);
-        gap: 0.5rem;
+        gap: 0.8rem;
     }
 }
 .block {
